üye olma doğrulama kodu üretme işlemlerine başlanıldı.

--- a/OtoGalarim/app/src/main/res/values/strings.xml
+++ b/OtoGalarim/app/src/main/res/values/strings.xml
@@ -20,4 +20,5 @@
         completions."
     </string>
     <string name="title_activity_register">Sign in</string>
+    <string name="title_activity_dogrulama">Sign in</string>
 </resources>
